<resources>
    <string name="app_name">Tic Tac Toe9</string>
    <string name="your_name_is">Nazywasz się:\u00A0</string>
    <string name="change">Zmień</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="username_should_not_be_empty">Zła nazwa użytkownika</string>
    <string name="room_name_is">Nazwa pokoju:\u00A0</string>
    <string name="room_name">Edytuj nazwę pokoju</string>
    <string name="initial_marker_is">Zaczyna:\u00A0</string>
    <string name="random">Losowo</string>
    <string name="start_host">Hostuj grę!</string>
    <string name="press_again_to_confirm">Wciśń aby wrócić.</string>
    <string name="next_move">Następny ruch:</string>
    <string name="start_join">Dołącz</string>
</resources>
